--- a/favourites/static/css/favourites.css
+++ b/favourites/static/css/favourites.css
@@ -4,8 +4,9 @@ body {
     background-color: #f6f6f6;
 }
 
-h2 {
+h1 {
     text-align: center;
+    font-size: 30px;
     padding: 30px 0 30px 0;
 }
 
