--- a/shopping_cart/static/css/cart.css
+++ b/shopping_cart/static/css/cart.css
@@ -5,7 +5,8 @@ body {
 
 h1 {
     text-align: center;
-    padding: 40px 0 40px 0;
+    font-size: 30px;
+    padding: 30px 0 30px 0;
 }
 
 .cart-content {
