--- a/templates/users/loginuser.html
+++ b/templates/users/loginuser.html
@@ -33,7 +33,7 @@
                     </div>
                 </form>
 
-                <p class="signup-link">Не имеете аккаунта? <a href="{% url 'signup' %}">Зарегистрируйтесь!</a></p>
+                <p class="signup-link">Еще нет аккаунта? <a href="{% url 'signup' %}">Зарегистрируйтесь!</a></p>
 {#                <p class="reset-pass-link"> <a href="{% url 'reset_password' %}">Забыли пароль?</a></p>#}
             </div>
         </div>
